// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvoconTimeInput > renders correctly as chip 1`] = `
<evocon24-h-time-input-stub
  class=""
  data-v-04c41d36=""
  modelvalue="12:12"
  usechip="true"
/>
`;

exports[`EvoconTimeInput > renders correctly in 12h format 1`] = `
<evocon12-h-time-input-stub
  class=""
  data-v-04c41d36=""
  modelvalue="12:12"
  usechip="false"
/>
`;

exports[`EvoconTimeInput > renders correctly in 24h format 1`] = `
<evocon24-h-time-input-stub
  class=""
  data-v-04c41d36=""
  modelvalue="12:12"
  usechip="false"
/>
`;
